--- a/RiskRent.API/appsettings.Development.json
+++ b/RiskRent.API/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=risksentdb;Username=risksentadmin;Password=senha"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "SecretKey": "Wv7@!4zL3$R2#Xp9Kv6%Qf1Bt8&Dm0Nc",
+    "Issuer": "RiskRent.API.Dev",
+    "Audience": "RiskRent.Client.Dev",
+    "ExpiryMinutes": 120
   }
 }
