--- a/RiskRent.API/appsettings.json
+++ b/RiskRent.API/appsettings.json
@@ -1,9 +1,18 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=risksentdb;Username=risksentadmin;Password=senha"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "Wv7@!4zL3$R2#Xp9Kv6%Qf1Bt8&Dm0Nc",
+    "Issuer": "RiskRent.API",
+    "Audience": "RiskRent.Client",
+    "ExpiryMinutes": 60
+  }
 }
